# ChronoChat

./: .dockerignore  .env.example  .gitignore  CLERK_AUTH_GUIDE.md  DATABASE_ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  langgraph_backend.py  pyproject.toml  requirements.txt  run_streamlit.bat  run_streamlit.ps1  streamlit_frontened_threading.py
Backend/: .dockerignore  .env.example  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  env.example  init.sql  main.py  nginx.conf  requirements.txt  setup.sh
Backend/app/api/: __init__.py
Backend/app/api/routes/: __init__.py  auth.py  chat.py  users.py
Backend/app/core/: config.py  database.py  redis.py  security.py
Backend/app/models/: __init__.py  chat.py  user.py
Backend/app/schemas/: __init__.py  auth.py  chat.py
Backend/app/services/: __init__.py  auth.py  chat.py
Backend/app/utils/: __init__.py  dependencies.py
alembic/: env.py
app/: __init__.py  main.py
app/api/routes/: auth.py  chat.py  health.py  system.py
app/core/: clerk.py  config.py  database.py
app/models/: conversation.py  user.py
app/repositories/: conversation_repository.py
app/schemas/: auth.py  chat.py
app/services/: ai_service.py  chat_agent.py  chat_service.py
